# koine

./: .editorconfig  .env.example  .gitignore  .markdownlint.yaml  AGENTS.md  CLAUDE.md  CODEOWNERS  CONTRIBUTING.md  Cargo.toml  Makefile  NOTICE  README.md  ROADMAP.md  SECURITY.md  compose.yaml  deny.toml  lefthook.yml  package-lock.json  package.json  typos.toml
.apptlas/: README.md
.apptlas/backlog/: README.md  item-template.md
.apptlas/backlog/done/: aol-hardening.md  ci-supply-chain-pinning.md  manifest-cleanup-workspace-deps.md  phase-0-foundations.md  phase-1a-domain-core.md  phase-1b-postgres-store.md  phase-2-carryover-hardening.md  phase-2a-atomic-lease-retirement.md  phase-2a-data-plane-server.md  phase-2a-operational-closure.md  phase-2a-postgres-resource-safety.md  retry-policy-ttl-bounds-hardening.md
.apptlas/backlog/ongoing/: phase-2a-atomic-lease-retirement.md  phase-2a-operational-closure.md  phase-2a-postgres-resource-safety.md
.apptlas/backlog/todo/: ci-supply-chain-pinning.md  manifest-cleanup-workspace-deps.md  phase-2-carryover-hardening.md  retry-policy-ttl-bounds-hardening.md
.apptlas/epics/: README.md  phase-1-event-sourced-core.md  phase-2-data-plane.md  phase-3-control-plane-dashboard.md  phase-4-agentic.md  phase-5-durable-execution.md
.apptlas/findings/: README.md
.apptlas/incidents/: README.md
.apptlas/instructions/: README.md  docs-style.instructions.md  event-sourcing.instructions.md  rust-style.instructions.md  testing.instructions.md
.apptlas/policies/: README.md  definition-of-done.md  definition-of-ready.md  documentation-policy.md  review-policy.md  supply-chain-policy.md  testing-policy.md
.apptlas/rubrics/: README.md  code-review-rubric.md  docs-quality-rubric.md  spec-fidelity-rubric.md
.apptlas/skills/: README.md
.apptlas/workflows/: README.md  adr-workflow.md  task-lifecycle.md
.github/: pull_request_template.md
.github/scripts/: check-supply-chain.mjs  check-supply-chain.sh  test-supply-chain.sh
.github/supply-chain-fixtures/base/: Makefile  compose.yaml  package-lock.json  package.json
.github/supply-chain-fixtures/fail/duplicate-json/: package.json
.github/supply-chain-fixtures/fail/duplicate-tla-target/: Makefile
.github/supply-chain-fixtures/fail/dynamic-make-target/: Makefile
.github/supply-chain-fixtures/fail/image-digest/: compose.yaml
.github/supply-chain-fixtures/fail/image-no-digest/: compose.yaml
.github/supply-chain-fixtures/fail/image-tag/: compose.yaml
.github/supply-chain-fixtures/fail/invalid-json/: package.json
.github/supply-chain-fixtures/fail/js-yaml-version/: package.json
.github/supply-chain-fixtures/fail/lock-integrity/: package-lock.json
.github/workflows/: ci.yml
.superpowers/sdd/: operational-task-1-report.md  operational-task-2-report.md  operational-task-3-report.md
crates/koine-application/: Cargo.toml
crates/koine-application/src/: lib.rs  lineage.rs  ports.rs
crates/koine-application/src/use_cases/: cancel.rs  enqueue.rs  heartbeat.rs  lease.rs  mod.rs  sweep.rs  worker_ack.rs
crates/koine-cli/: Cargo.toml
crates/koine-cli/src/: main.rs
crates/koine-domain/: Cargo.toml
crates/koine-domain/src/: error.rs  events.rs  ids.rs  job.rs  lib.rs  queue.rs  retry.rs
crates/koine-domain/tests/: state_machine_props.rs
crates/koine-grpc/: Cargo.toml
crates/koine-grpc/src/: auth.rs  lib.rs  service.rs
crates/koine-grpc/tests/: fetch_idle_disconnect.rs  grpc_e2e.rs  wire.rs
crates/koine-grpc/tests/support/: mod.rs
crates/koine-http/: Cargo.toml
crates/koine-http/src/: lib.rs
crates/koine-mcp/: Cargo.toml
crates/koine-mcp/src/: lib.rs
crates/koine-observability/: Cargo.toml
crates/koine-observability/src/: lib.rs
crates/koine-proto/: Cargo.toml  build.rs
crates/koine-proto/proto/koine/v1/: worker.proto
crates/koine-proto/src/: lib.rs
crates/koine-server/: Cargo.toml
crates/koine-server/src/: dev_loop.rs  main.rs  runtime.rs  serve.rs  sinks.rs
crates/koine-store-memory/: Cargo.toml
crates/koine-store-memory/src/: dispatcher.rs  lib.rs  signal.rs  store.rs  test_support.rs
crates/koine-store-memory/tests/: lifecycle.rs
crates/koine-store-postgres/: Cargo.toml
crates/koine-store-postgres/migrations/: 0001_event_store.sql  0002_worker_presence.sql
crates/koine-store-postgres/src/: dispatcher.rs  lib.rs  presence.rs  relay.rs  rows.rs  signal.rs  store.rs
crates/koine-store-postgres/tests/: dispatcher.rs  lifecycle.rs  outbox.rs  pool.rs  replay.rs  signal.rs  store.rs
crates/koine-store-postgres/tests/support/: mod.rs
docs/adr/: 0001-koine-identity-and-name.md  0002-apache-2-license-github-canonical.md  0003-multi-crate-workspace-compiled-hexagon.md  0004-event-log-single-source-of-truth.md  0005-postgres-event-store-behind-port.md  0006-sync-dispatch-projection-async-outbox.md  0007-grpc-data-plane-rest-mcp-control-plane.md  0008-at-least-once-leases.md  0009-dashboard-vite-react-embedded.md  0010-event-encoding-and-identity.md  0011-dispatch-atomicity-and-lease-ephemera.md  0012-postgres-store-mechanics.md  0013-wire-contract-v1.md  0014-worker-auth-v1.md  0015-worker-presence-ephemeral.md  0016-atomic-lease-retirement-heartbeat-fencing.md  0017-hermetic-protobuf-ci-artifact-pinning.md  INDEX.md  template.md
docs/architecture/: README.md  event-model.md  koine-application.md  koine-domain.md  koine-grpc.md  koine-proto.md  koine-server.md  koine-store-memory.md  koine-store-postgres.md  overview.md
docs/formal/: README.md  lease_protocol.cfg  lease_protocol.tla
docs/superpowers/handoffs/: 2026-07-19-phase-2a-execution.md
docs/superpowers/plans/: 2026-07-17-koine-phase-0-foundations.md  2026-07-18-koine-phase-1a-domain-core.md  2026-07-18-koine-phase-1b-postgres-store.md  2026-07-19-koine-phase-2a-data-plane-server.md  2026-07-21-koine-atomic-lease-hardening.md  2026-07-21-koine-operational-closure.md  2026-07-21-koine-postgres-resource-hardening.md
docs/superpowers/specs/: 2026-07-16-koine-design.md  2026-07-21-koine-phase-2a-zero-debt-hardening-design.md
scripts/: check-commit-message.sh
(+77 files in other folders)
