[workspace]
resolver = "3"
members = [
    "crates/koine-domain",
    "crates/koine-application",
    "crates/koine-proto",
    "crates/koine-store-postgres",
    "crates/koine-store-memory",
    "crates/koine-grpc",
    "crates/koine-http",
    "crates/koine-mcp",
    "crates/koine-observability",
    "crates/koine-server",
    "crates/koine-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.95"
license = "Apache-2.0"
repository = "https://github.com/TensegrityAI/koine"
authors = ["Marcos Saez <marcos.asp989@gmail.com>"]

[workspace.dependencies]
koine-application = { version = "0.1.0", path = "crates/koine-application" }
koine-cli = { version = "0.1.0", path = "crates/koine-cli" }
koine-domain = { version = "0.1.0", path = "crates/koine-domain" }
koine-grpc = { version = "0.1.0", path = "crates/koine-grpc" }
koine-http = { version = "0.1.0", path = "crates/koine-http" }
koine-mcp = { version = "0.1.0", path = "crates/koine-mcp" }
koine-observability = { version = "0.1.0", path = "crates/koine-observability" }
koine-proto = { version = "0.1.0", path = "crates/koine-proto" }
koine-server = { version = "0.1.0", path = "crates/koine-server" }
koine-store-memory = { version = "0.1.0", path = "crates/koine-store-memory" }
koine-store-postgres = { version = "0.1.0", path = "crates/koine-store-postgres" }

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
unwrap_used = "warn"
expect_used = "warn"
module_name_repetitions = "allow"
