[package]
name = "koine-application"
description = "Koiné application layer: use cases and driven ports (EventStore, Dispatcher, Clock, IdGenerator)."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
koine-domain = { version = "0.1.0", path = "../koine-domain" }
serde_json = "1"
thiserror = "2"
uuid = { version = "1", features = ["v7", "serde"] }

[lints]
workspace = true
