[package]
name = "koine-cli"
description = "Koiné operator CLI: trace, queue and job operations against the control plane."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]

[lints]
workspace = true
