[package]
name = "koine-cli"
description = "Koiné operator CLI: trace, queue and job operations against the control plane."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

# Stub crate (phase 3+ control-plane CLI): no dependencies declared yet, so
# cargo-machete has nothing to flag here and no `[package.metadata.cargo-machete]`
# `ignored` list is needed — this is intentional, not an oversight
# (phase-2-carryover-hardening AC3).
[dependencies]

[lints]
workspace = true
