[package]
name = "koine-domain"
description = "Koiné domain layer: aggregates, domain events, state machines. No I/O, no async, no infra deps."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]

[lints]
workspace = true
