[package]
name = "koine-domain"
description = "Koiné domain layer: aggregates, domain events, state machines. No I/O, no async, no infra deps."
publish = false
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
uuid = { version = "1", features = ["v7", "serde"] }

[dev-dependencies]
proptest = "1"

[lints]
workspace = true
