[package]
name = "koine-grpc"
description = "Koiné data plane driving adapter: worker fetch stream, ack/fail, heartbeats, checkpoints over `gRPC`."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
koine-domain = { version = "0.1.0", path = "../koine-domain" }
koine-application = { version = "0.1.0", path = "../koine-application" }
koine-proto = { version = "0.1.0", path = "../koine-proto" }
tonic = { version = "0.14", default-features = false, features = ["transport", "codegen"] }
tokio = { version = "1", default-features = false, features = ["rt", "sync", "macros"] }
tokio-stream = { version = "0.1", default-features = false, features = ["sync"] }
serde_json = "1"
subtle = "2"
uuid = "1"

[dev-dependencies]
koine-store-memory = { version = "0.1.0", path = "../koine-store-memory" }
chrono = "0.4"
tokio = { version = "1", default-features = false, features = ["time", "io-util"] }
tower = { version = "0.5", default-features = false, features = ["util"] }
hyper-util = { version = "0.1", default-features = false, features = ["tokio"] }
# Only the wire test needs a real `tonic::transport::Server` (`Server::add_service`
# is gated behind "router"); the production `[dependencies]` above stays on
# "transport" + "codegen" only. Cargo unifies both feature sets for test builds.
tonic = { version = "0.14", default-features = false, features = ["router"] }

[lints]
workspace = true
