[package]
name = "koine-http"
description = "Koiné control plane driving adapter: REST API with OpenAPI, serves the embedded dashboard."
publish = false
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
koine-domain = { workspace = true }
koine-application = { workspace = true }

[lints]
workspace = true
