[package]
name = "koine-mcp"
description = "Koiné agent control plane driving adapter: MCP server over the same use cases."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
koine-domain = { path = "../koine-domain" }
koine-application = { path = "../koine-application" }

[lints]
workspace = true
