[package]
name = "koine-mcp"
description = "Koiné agent control plane driving adapter: MCP server over the same use cases."
publish = false
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
koine-domain = { workspace = true }
koine-application = { workspace = true }

[lints]
workspace = true
