[package]
name = "koine-observability"
description = "Koiné observability init: OpenTelemetry tracing, Prometheus metrics."
publish = false
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]

[lints]
workspace = true
