[package]
name = "koine-proto"
description = "Koiné wire contract: versioned protobuf definitions and generated `gRPC` types."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]

[lints]
workspace = true
