[package]
name = "koine-proto"
description = "Koiné wire contract: versioned protobuf definitions and generated `gRPC` types."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
prost = "0.14"
tonic = { version = "0.14", default-features = false, features = ["codegen", "transport"] }
tonic-prost = "0.14"

[build-dependencies]
tonic-prost-build = "0.14"

[lints]
workspace = true
