[package]
name = "koine-server"
description = "Koiné server binary: composition root wiring adapters to the application core."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
koine-domain = { version = "0.1.0", path = "../koine-domain" }
koine-application = { version = "0.1.0", path = "../koine-application" }
koine-store-postgres = { version = "0.1.0", path = "../koine-store-postgres" }
koine-store-memory = { version = "0.1.0", path = "../koine-store-memory" }
koine-grpc = { version = "0.1.0", path = "../koine-grpc" }
koine-http = { version = "0.1.0", path = "../koine-http" }
koine-mcp = { version = "0.1.0", path = "../koine-mcp" }
koine-observability = { version = "0.1.0", path = "../koine-observability" }

[lints]
workspace = true
