[package]
name = "koine-server"
description = "Koiné server binary: composition root wiring adapters to the application core."
publish = false
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
koine-domain = { workspace = true }
koine-application = { workspace = true }
koine-store-postgres = { workspace = true }
koine-grpc = { workspace = true }

chrono = "0.4"
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "time"] }
tonic = { version = "0.14", default-features = false, features = ["router", "transport"] }
uuid = { version = "1", features = ["v7"] }

[lints]
workspace = true
