[package]
name = "koine-store-memory"
description = "Koiné in-memory driven adapter for tests: complete port implementations without I/O."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
koine-application = { version = "0.1.0", path = "../koine-application" }
koine-domain = { version = "0.1.0", path = "../koine-domain" }
serde_json = "1"
thiserror = "2"
uuid = { version = "1", features = ["v7", "serde"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt"] }

[lints]
workspace = true
