[package]
name = "koine-store-memory"
description = "Koiné in-memory driven adapter for tests: complete port implementations without I/O."
publish = false
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
koine-application = { workspace = true }
koine-domain = { workspace = true }
serde_json = "1"
tokio = { version = "1", features = ["sync", "time", "macros", "rt"] }
uuid = { version = "1", features = ["v7", "serde"] }

[dev-dependencies]

[lints]
workspace = true
