[package]
name = "koine-store-postgres"
description = "Koiné `Postgres` driven adapter: event store, transactional outbox, projections."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
koine-domain = { version = "0.1.0", path = "../koine-domain" }
koine-application = { version = "0.1.0", path = "../koine-application" }

[lints]
workspace = true
