[package]
name = "koine-store-postgres"
description = "Koiné Postgres driven adapter: event store, transactional outbox, projections."
publish = false
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
koine-domain = { workspace = true }
koine-application = { workspace = true }

chrono = { version = "0.4", features = ["serde"] }
serde_json = "1"
sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio",
    "tls-rustls",
    "postgres",
    "chrono",
    "uuid",
    "json",
    "macros",
    "migrate",
] }
tokio = { version = "1", features = ["rt", "sync", "time"] }
uuid = { version = "1", features = ["v7", "serde"] }

[dev-dependencies]
koine-store-memory = { workspace = true }
testcontainers = "0.27"
testcontainers-modules = { version = "0.15", features = ["postgres"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[lints]
workspace = true
